--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
